<resources>
    <string name="app_name">BMI_calculator</string>
    <string name="calculate">calculate</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="height_cm">Height [cm]</string>
    <string name="bmi">Bmi:</string>
    <string name="burger">☰</string>
    <string name="metric_units">Metric Units</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="category_">Category:</string>
    <string name="date">Date:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="category">Category</string>
    <string name="characteristics">Characteristics</string>
    <string name="definition">Definition</string>
    <string name="implications">Implications</string>
    <string name="blank" />
    <string name="history">History</string>
    <string name="about_me">About Me</string>
    <string name="about_me_description">She was born and raised in Białystok. Somehow ended up at Wroclaw University of Science and Technology. And is now crying over this app. Choices. Anyways those are her dogs</string>
    <string name="author">Magda Szeląg</string>
    <string name="cisek">Cisek</string>
    <string name="yuki">Yuki</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="weight_lb">Weight [lb]</string>
    <string name="height_in">Height [in]</string>
    <string name="imperial">imperial</string>
    <string name="metric">metric</string>
    <string name="date_formatter">yyyy-MM-dd HH:mm:ss</string>
    <string name="error_incorrect_values">Provide correct values</string>
    <string name="bmi_formatted">"BMI: %.2f "</string>
    <string name="color">color</string>
    <string name="format">"%.2f "</string>
    <string name="underweight">Underweight</string>
    <string name="healthy_weight">Healthy weight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>
    <string name="underweight_definition">Underweight is a category of BMI that indicates an individual has a lower body mass relative to their height. This can result from insufficient caloric intake, underlying medical conditions, or poor nutrition.\n</string>
    <string name="underweight_characteristics">People in the underweight category may have a BMI below 18.5. They often have less body fat and muscle mass than is considered healthy, which can lead to a weakened immune system, nutritional deficiencies, and other health issues.\n</string>
    <string name="underweight_implications">Being underweight can increase the risk of health problems such as weakened bones, compromised immune function, and difficulty in maintaining proper body functions. Medical attention and dietary adjustments may be necessary to achieve a healthier weight.</string>
    <string name="healthy_definition">Healthy weight refers to a BMI range that is considered optimal for overall well-being and reduced risk of obesity-related health issues. It represents a balanced ratio of weight to height.\n</string>
    <string name="healthy_characteristics">A healthy weight typically falls within the BMI range of 18.5 to 24.9. People in this category are often better equipped to maintain good physical health, as well as overall energy and vitality.\n</string>
    <string name="healthy_implications">Maintaining a healthy weight is associated with a lower risk of chronic diseases, improved cardiovascular health, and better physical fitness. It is generally seen as the ideal BMI range for most individuals.</string>
    <string name="overweight_definition">Overweight indicates a higher BMI than the healthy weight range, suggesting an excess of body fat. This can result from factors like overeating, lack of physical activity, or genetic predisposition.\n</string>
    <string name="overweight_characteristics">Individuals in the overweight category often have a BMI between 25 and 29.9. This excess weight can contribute to an increased risk of conditions such as heart disease, type 2 diabetes, and joint problems.\n</string>
    <string name="overweight_implications">Being overweight can lead to various health challenges and complications, making it essential to adopt lifestyle changes such as a balanced diet and regular exercise to reduce health risks and reach a healthier weight.</string>
    <string name="obesity_definition">Obesity is a severe condition characterized by a very high BMI, indicating a substantial accumulation of excess body fat. It can have serious health implications and is often the result of prolonged unhealthy lifestyle choices.\n</string>
    <string name="obesity_characteristics">Obesity is typically defined by a BMI of 30 or higher. It significantly raises the risk of life-threatening health conditions, including heart disease, stroke, certain cancers, sleep apnea, and more.\n</string>
    <string name="obesity_implications">Obesity is associated with a multitude of health problems and is considered a major public health concern. Treatment often involves comprehensive lifestyle changes, including diet, exercise, and, in some cases, medical interventions to reduce the risks associated with excess body weight.</string>
    <string name="yuki_dog_photo">yuki_dog_photo</string>
    <string name="cisek_dog_photo">cisek_dog_photo</string>
</resources>
